--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,10 @@
 pipeline:
+  docker:
+    image: plugins/docker
+    custom_dns: [ 1.1.1.1, 8.8.8.8 ]
   build:
     image: plugins/docker
     commands: [ make build ]
-    custom_dns: [ 1.1.1.1, 8.8.8.8 ]
   
   publish:
     image: plugins/docker
